--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "jest": "^24.9.0",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.4"
+  },
+  "dependencies": {
+    "axios": "^0.19.0"
   }
 }
